--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -126,6 +126,23 @@
   }
 }
 
+.blinking-cursor {
+  display: inline-block;
+  width: 1ch;
+  animation: blink 1s steps(1) infinite;
+}
+@keyframes blink {
+  0%,
+  50%,
+  100% {
+    opacity: 1;
+  }
+  25%,
+  75% {
+    opacity: 0;
+  }
+}
+
 .cells-pattern {
   background-color: white;
   background-image:
